-added support for per-door textures on elevator/shaft doors
-added elevator door collision sensors
-added last collision indicator to control panel
-added support for call button lighting
-major fixes to the elevator queue and call processing
-fixes to some elevator parameters, where they would error out if used in a different block than the CreateElevator command

Version 1.4.1 (2.0 Alpha 4.1)
-------------------------
-Linux build fix
-fixed a shaft door regression

Version 1.4 (2.0 Alpha 4)
-------------------------
-added syntax checking and error notification to the script processor
-fixed an old bug that could crash the sim if the floor ID matched a non-existent texture
-added support (and FloorSkipText parameter) for showing express zone indicators during floor skips
-added ACP, Up Peak, Down Peak, Independent Service, Inspection Service, and Fire Service phases 1 and 2 modes to elevators (not all work yet)
-remade manual/emergency door open/close methods
-added door stop function for doors in manual/emergency mode
-elevator doors no longer open during an emergency stop (except for a manual open)
-manual opens during an emergency stop will only open the elevator car doors
-fixed a crash that involved trying to open shaft doors on a non-serviced floor
-added shaft tops to the Triton Center and Simple elevator shafts
-lots of memory leak fixes
-simulator now pauses when main window is minimized
-Sears Tower skydeck elevator crash fixed
-performance enhancements
-call selection fix
-half of express elevators in both the Triton Center and Sears Tower buildings
are now stationed at the top
-fixed ShowFullShaft command
-added support for elevator directional indicators
-added alarm sounds
-added support for multiple elevator doors
-added support for specifying shaft doors on a per-floor basis
-added AddFloorSigns command that creates floor signs on all floors served by an elevator
-numerous Triton Center fixes