@@ -353,9 +353,9 @@
     the building (sky, landscape, etc) to be enabled while the user is both inside 
     the specified shaft and on one of the specified floors - primarily for glass 
     elevators.<br>
-    Syntax:<font size="2" face="Courier New, Courier, mono"> ShaftShowFloors <em>ShaftNumber</em> 
-    = <em>range/list</em></font><br>
-    Example: <font size="2" face="Courier New, Courier, mono">ShaftShowFloors 
+    Syntax:<font size="2" face="Courier New, Courier, mono"> ShowShaftOutside 
+    <em>ShaftNumber</em> = <em>range/list</em></font><br>
+    Example: <font size="2" face="Courier New, Courier, mono">ShowShaftOutside 
     1 = 1 - 10</font></p>
   <p align="left">In the above example, if a user is riding an elevator in shaft 
     1, the outside (sky, landscape, etc) will be enabled while the elevator is 
